css/styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  background-color: rgb(239, 239, 239);
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  padding: 50px 0 25px 0;
}

.main__header {
  font-family: "Hind", sans-serif;
  font-weight: 700;
  font-size: 3rem;
  margin-bottom: 10px;
  color: rgb(48, 48, 48);
}

.main__subheader {
  font-family: "IM Fell Great Primer", serif;
  font-weight: 400;
  font-size: 1.75rem;
  color: rgb(48, 48, 48);
}

.container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: 50px;
}

.card {
  padding: 20px;
  width: 400px;
  background-color: rgb(255, 255, 255);
  outline: 0 solid rgb(48, 48, 48);
  border: 1px solid rgb(192, 192, 192);
  border-radius: 12px;
  transition: outline 0.25s, transform 0.25s ease, box-shadow 0.5s ease;
}

.card:hover {
  transform: perspective(1250px) rotateX(10deg) rotateY(-10deg) scale(1.05);
  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
  outline-width: 5px;
}

.card__image {
  border: 1px solid rgb(192, 192, 192);
  border-radius: 12px;
  margin-bottom: 20px;
  height: 300px;
  width: 100%;
  object-fit: cover;
  object-position: center;
}

.card__title {
  font-family: "Maitree", serif;
  margin-bottom: 10px;
}

.card__description {
  font-family: "Maitree", serif;
  font-weight: 400;
  margin-bottom: 15px;
  height: 3rem;
}

.card__button {
  position: relative;
  cursor: pointer;
  font-family: "Maitree", serif;
  text-decoration: none;
  color: rgb(255, 255, 255);
  background-color: rgb(0, 0, 0);
  padding: 10px;
  border: none;
  border-radius: 12px;
  outline: none;
  min-width: 120px;
  transition: transform 0.1s ease;
}

.card__button::after {
  content: "Purchase »";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(96, 96, 97);
  border-radius: 12px;
  color: rgb(255, 255, 255);
  opacity: 0;
  transition: opacity 0.5s ease;
}

.card__button:hover::after {
  opacity: 1;
}

.card__button:active {
  transform: scale(0.9);
}

